# sparse-tensor

./: .gitignore  Cargo.toml  Makefile  comm.jl  tensor.jl  test.jl
data/: tensor_opts.json
examples/: ffi_test.c
include/: sparse_tensor.h
mpi_tests/: unique_tensor.rs
output/pfeat/: amazon-reviews.out  patents.out
output/pgentensor/: flickr-like.out  reddit-2015.out
scripts/: generate_pc.py  mpi_test.sh
src/: comm.rs  feat.rs  lib.rs  synthetic.rs
src/synthetic/: c_api.rs  mod.rs
