[package]
name = "sparse-tensor"
edition = "2021"
version = "0.0.1"

[dependencies]
faer = "0.21.7"
bzip2 = "0.5.2"
rand = "0.9.0"
rand_distr = "0.5.1"
rand_chacha = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
mpi = "0.8.0"
rayon = "1.10"
rayon-scan = "0.1.1"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "unique_tensor"
path = "mpi_tests/unique_tensor.rs"
